--- a/index.html
+++ b/index.html
@@ -1,196 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>GP-OCEAN TEST</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="./assets/css/style.css">
-	</head>
-	<body>
+<head>
+	<title>GP-OCEAN TEST</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+	<div id="container"></div>
+	<div id="info">
+		<a >three.js</a> - webgl ocean
+	</div>
 
-		<div id="container"></div>
-		<div id="info">
-			<a >three.js</a> - webgl ocean
-		</div>
+	<script type="module">
+		import * as THREE from 'https://cdn.skypack.dev/three@0.128.0/build/three.module.js';
+		import Stats from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/stats.module.js';
+		import {
+			GUI
+		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/dat.gui.module.js';
+		import {
+			OrbitControls
+		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/controls/OrbitControls.js';
+		import {
+			Water
+		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Water.js';
+		import {
+			Sky
+		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Sky.js';
 
-		<script type="module">
+		
+		let container, stats;
+		let camera, scene, renderer;
+		let controls, water, sun, mesh;
+		let moveForward = false,
+			moveBackward = false,
+			moveLeft = false,
+			moveRight = false;
+		const carSpeed = 0.5; // 车辆移动速度
+		const carTurnSpeed = 0.05; // 转向灵敏度
+		const moveDirection = new THREE.Vector3();
 
-			import * as THREE from 'https://cdn.skypack.dev/three@0.128.0/build/three.module.js';
 
-			import Stats from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/stats.module.js';
+		init();
+		animate();
 
-			import { GUI } from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/dat.gui.module.js';
-			import { OrbitControls } from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/controls/OrbitControls.js';
-			import { Water } from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Water.js';
-			import { Sky } from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Sky.js';
+		function init() {
+			container = document.getElementById('container');
 
-			let container, stats;
-			let camera, scene, renderer;
-			let controls, water, sun, mesh;
+			renderer = new THREE.WebGLRenderer();
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			renderer.toneMapping = THREE.ACESFilmicToneMapping;
+			container.appendChild(renderer.domElement);
 
-			init();
-			animate();
+			scene = new THREE.Scene();
 
-			function init() {
+			camera = new THREE.PerspectiveCamera(55, window.innerWidth / window.innerHeight, 1, 20000);
+			camera.position.set(30, 30, 100);
 
-				container = document.getElementById( 'container' );
+			sun = new THREE.Vector3();
 
-				//
+			const waterGeometry = new THREE.PlaneGeometry(10000, 10000);
 
-				renderer = new THREE.WebGLRenderer();
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.toneMapping = THREE.ACESFilmicToneMapping;
-				container.appendChild( renderer.domElement );
-
-				//
-
-				scene = new THREE.Scene();
-
-				camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 1, 20000 );
-				camera.position.set( 30, 30, 100 );
-
-				//
-
-				sun = new THREE.Vector3();
-
-				// Water
-
-				const waterGeometry = new THREE.PlaneGeometry( 10000, 10000 );
-
-				water = new Water(
-					waterGeometry,
-					{
-						textureWidth: 512,
-						textureHeight: 512,
-						waterNormals: new THREE.TextureLoader().load( 'https://raw.githubusercontent.com/IanUme/ThreejsTest/master/textures/waternormals.jpg', function ( texture ) {
-
-							texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
-
-						} ),
-						sunDirection: new THREE.Vector3(),
-						sunColor: 0xffffff,
-						waterColor: 0x001e0f,
-						distortionScale: 3.7,
-						fog: scene.fog !== undefined
-					}
-				);
-
-				water.rotation.x = - Math.PI / 2;
-
-				scene.add( water );
-
-				// Skybox
-
-				const sky = new Sky();
-				sky.scale.setScalar( 10000 );
-				scene.add( sky );
-
-				const skyUniforms = sky.material.uniforms;
-
-				skyUniforms[ 'turbidity' ].value = 10;
-				skyUniforms[ 'rayleigh' ].value = 2;
-				skyUniforms[ 'mieCoefficient' ].value = 0.005;
-				skyUniforms[ 'mieDirectionalG' ].value = 0.8;
-
-				const parameters = {
-					elevation: 2,
-					azimuth: 180
-				};
-
-				const pmremGenerator = new THREE.PMREMGenerator( renderer );
-
-				function updateSun() {
-
-					const phi = THREE.MathUtils.degToRad( 90 - parameters.elevation );
-					const theta = THREE.MathUtils.degToRad( parameters.azimuth );
-
-					sun.setFromSphericalCoords( 1, phi, theta );
-
-					sky.material.uniforms[ 'sunPosition' ].value.copy( sun );
-					water.material.uniforms[ 'sunDirection' ].value.copy( sun ).normalize();
-
-					scene.environment = pmremGenerator.fromScene( sky ).texture;
-
+			water = new Water(
+				waterGeometry, {
+					textureWidth: 512,
+					textureHeight: 512,
+					waterNormals: new THREE.TextureLoader().load('https://raw.githubusercontent.com/IanUme/ThreejsTest/master/textures/waternormals.jpg', function (texture) {
+						texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
+					}),
+					sunDirection: new THREE.Vector3(),
+					sunColor: 0xffffff,
+					waterColor: 0x001e0f,
+					distortionScale: 3.7,
+					fog: scene.fog !== undefined
 				}
+			);
 
-				updateSun();
+			water.rotation.x = -Math.PI / 2;
 
-				//
+			scene.add(water);
 
-				const geometry = new THREE.BoxGeometry( 30, 30,100 );
-				const material = new THREE.MeshStandardMaterial( { roughness: 0 } );
+			const sky = new Sky();
+			sky.scale.setScalar(10000);
+			scene.add(sky);
 
-				mesh = new THREE.Mesh( geometry, material );
-				scene.add( mesh );
+			const skyUniforms = sky.material.uniforms;
+			skyUniforms['turbidity'].value = 10;
+			skyUniforms['rayleigh'].value = 2;
+			skyUniforms['mieCoefficient'].value = 0.005;
+			skyUniforms['mieDirectionalG'].value = 0.8;
 
-				//
+			const parameters = {
+				elevation: 2,
+				azimuth: 180
+			};
 
-				controls = new OrbitControls( camera, renderer.domElement );
-				controls.maxPolarAngle = Math.PI * 0.495;
-				controls.target.set( 0, 10, 0 );
-				controls.minDistance = 40.0;
-				controls.maxDistance = 200.0;
-				controls.update();
+			const pmremGenerator = new THREE.PMREMGenerator(renderer);
 
-				//
-
-				stats = new Stats();
-				container.appendChild( stats.dom );
-
-				// GUI
-
-				const gui = new GUI();
-
-				const folderSky = gui.addFolder( 'Sky' );
-				folderSky.add( parameters, 'elevation', 0, 90, 0.1 ).onChange( updateSun );
-				folderSky.add( parameters, 'azimuth', - 180, 180, 0.1 ).onChange( updateSun );
-				folderSky.open();
-
-				const waterUniforms = water.material.uniforms;
-
-				const folderWater = gui.addFolder( 'Water' );
-				folderWater.add( waterUniforms.distortionScale, 'value', 0, 8, 0.1 ).name( 'distortionScale' );
-				folderWater.add( waterUniforms.size, 'value', 0.1, 10, 0.1 ).name( 'size' );
-				folderWater.open();
-
-				//
-
-				window.addEventListener( 'resize', onWindowResize );
-
+			function updateSun() {
+				const phi = THREE.MathUtils.degToRad(90 - parameters.elevation);
+				const theta = THREE.MathUtils.degToRad(parameters.azimuth);
+				sun.setFromSphericalCoords(1, phi, theta);
+				sky.material.uniforms['sunPosition'].value.copy(sun);
+				water.material.uniforms['sunDirection'].value.copy(sun).normalize();
+				scene.environment = pmremGenerator.fromScene(sky).texture;
 			}
 
-			function onWindowResize() {
+			updateSun();
 
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
+			const geometry = new THREE.BoxGeometry(30, 30, 100);
+			const material = new THREE.MeshStandardMaterial({
+				roughness: 0
+			});
 
-				renderer.setSize( window.innerWidth, window.innerHeight );
+			mesh = new THREE.Mesh(geometry, material);
+			scene.add(mesh);
 
-			}
+			controls = new OrbitControls(camera, renderer.domElement);
+			controls.maxPolarAngle = Math.PI * 0.495;
+			controls.target.set(0, 10, 0);
+			controls.minDistance = 40.0;
+			controls.maxDistance = 200.0;
+			controls.update();
 
-			function animate() {
+			stats = new Stats();
+			container.appendChild(stats.dom);
 
-				requestAnimationFrame( animate );
-				render();
-				stats.update();
+			const gui = new GUI();
 
-			}
+			const folderSky = gui.addFolder('Sky');
+			folderSky.add(parameters, 'elevation', 0, 90, 0.1).onChange(updateSun);
+			folderSky.add(parameters, 'azimuth', -180, 180, 0.1).onChange(updateSun);
+			folderSky.open();
 
-			function render() {
+			const waterUniforms = water.material.uniforms;
 
-				const time = performance.now() * 0.001;
+			const folderWater = gui.addFolder('Water');
+			folderWater.add(waterUniforms.distortionScale, 'value', 0, 8, 0.1).name('distortionScale');
+			folderWater.add(waterUniforms.size, 'value', 0.1, 10, 0.1).name('size');
+			folderWater.open();
 
-				//mesh.position.y = Math.sin( time ) * 20 + 5;
-				//mesh.rotation.x = time * 0.5;
-				//mesh.rotation.z = time * 0.51;
+			window.addEventListener('resize', onWindowResize);
+			document.addEventListener('keydown', onKeyDown);
+			document.addEventListener('keyup', onKeyUp);
+		}
+		
 
-				water.material.uniforms[ 'time' ].value += 1.0 / 60.0;
+		function onKeyDown(event) {
+    switch (event.keyCode) {
+        case 87: // W
+        case 38: // Up arrow
+            moveForward = true;
+            break;
+        case 83: // S
+        case 40: // Down arrow
+            moveBackward = true;
+            break;
+        case 65: // A
+        case 37: // Left arrow
+            moveLeft = true;
+            break;
+        case 68: // D
+        case 39: // Right arrow
+            moveRight = true;
+            break;
+    }
+}
 
-				renderer.render( scene, camera );
 
-			}
+function onKeyUp(event) {
+    switch (event.keyCode) {
+        case 87: // W
+        case 38: // Up arrow
+            moveForward = false;
+            break;
+        case 83: // S
+        case 40: // Down arrow
+            moveBackward = false;
+            break;
+        case 65: // A
+        case 37: // Left arrow
+            moveLeft = false;
+            break;
+        case 68: // D
+        case 39: // Right arrow
+            moveRight = false;
+            break;
+    }
+}
 
-		</script>
-	</body>
+		function onWindowResize() {
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+			renderer.setSize(window.innerWidth, window.innerHeight);
+		}
+
+		function animate() {
+			requestAnimationFrame(animate);
+			render();
+			stats.update();
+		}
+
+		function render() {
+    const time = performance.now() * 0.001;
+
+    if (moveForward) {
+        const direction = new THREE.Vector3();
+        controls.getDirection(direction);
+        mesh.position.addScaledVector(direction, carSpeed);
+    }
+    if (moveBackward) {
+        const direction = new THREE.Vector3();
+        controls.getDirection(direction);
+        mesh.position.addScaledVector(direction, -carSpeed);
+    }
+    if (moveLeft) {
+        mesh.rotation.y += carTurnSpeed;
+    }
+    if (moveRight) {
+        mesh.rotation.y -= carTurnSpeed;
+    }
+
+    water.material.uniforms['time'].value += 1.0 / 60.0;
+
+    renderer.render(scene, camera);
+}
+	</script>
+</body>
 </html>
