--- a/index.html
+++ b/index.html
@@ -1,245 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>GP-OCEAN TEST</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>海洋專題</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div id="container"></div>
-	<div id="info">
-		<a>three.js</a> - webgl ocean
-	</div>
+    
 
-	<script type="module">
-		import * as THREE from 'https://cdn.skypack.dev/three@0.128.0/build/three.module.js';
-		import Stats from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/stats.module.js';
-		import {
-			GUI
-		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/libs/dat.gui.module.js';
-		import {
-			OrbitControls
-		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/controls/OrbitControls.js';
-		import {
-			Water
-		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Water.js';
-		import {
-			Sky
-		} from 'https://cdn.skypack.dev/three@0.128.0/examples/jsm/objects/Sky.js';
+<!-- Bag Modal -->
+<div class="modal fade custom-modal-size" id="bagModal" tabindex="-1" role="dialog" aria-labelledby="bagModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bagModalLabel"><b>塑膠袋</b></h5>          
+            </div>
+            <div class="modal-body">
+                黑潮海洋文教基金會執行島航計畫，耗費500萬元，環島一周採集海表面的微塑膠，發現台灣各海域中都有微塑膠的分布。
+                <img src="PIC/PBag.jpg" alt="塑膠袋" class="img-fluid">
+                經過半年多的分析，黑潮海洋文教基金會執行長表示，目前台灣各處海域都有發現微塑膠的蹤跡，其中以八掌溪出海口的濃度最高，每立方公尺中都發現64.12個微塑膠，而後勁溪與和平島測站則是分居二、三名。
+            </div>
+        </div>
+    </div>
+</div>
 
-		
-		let container, stats;
-		let camera, scene, renderer;
-		let controls, water, sun, mesh;
-		let moveForward = false,
-			moveBackward = false,
-			moveLeft = false,
-			moveRight = false;
-		const carSpeed = 0.5; // 车辆移动速度
-		const carTurnSpeed = 0.05; // 转向灵敏度
-		const moveDirection = new THREE.Vector3();
+<!-- Bottle Modal -->
+<div class="modal fade custom-modal-size" id="bottleModal" tabindex="-1" role="dialog" aria-labelledby="bottleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bottleModalLabel"><b>關於寶特瓶</b></h5>
 
-		let carPosition = new THREE.Vector3(0, 0, 0);
-		let carVelocity = new THREE.Vector3(0, 0, 0);
-		let carRotation = new THREE.Euler(0, 0, 0);
-		let carAngularVelocity = 0;
+            </div>
+            <div class="modal-body">
+                環保局分析海漂垃圾組成，資源垃圾當中以寶特瓶、機油瓶等塑膠容器比例最高
+                <img src="PIC/bott.jpg" alt="寶特瓶" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
 
-		init();
-		animate();
+<!-- can Modal -->
+<div class="modal fade custom-modal-size" id="canModal" tabindex="-1" role="dialog" aria-labelledby="canModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="canModalLabel"><b>鋁罐</b></h5>          
+            </div>
+            <div class="modal-body">
+                在海洋垃圾當中，第二多的是金屬。其中最大宗，佔了金屬垃圾的三分之二的是各式各樣的金屬罐–鐵罐、鋁罐、鋼罐。
+                <img src="PIC/cig.jpg" alt="鋁罐" class="img-fluid">   
+            </div>
+        </div>
+    </div>
+</div>
 
-		function init() {
-			container = document.getElementById('container');
+<!-- cig Modal -->
+<div class="modal fade custom-modal-size" id="cigModal" tabindex="-1" role="dialog" aria-labelledby="cigModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="cigModalLabel"><b>菸蒂不會自然分解！</b></h5>          
+            </div>
+            <div class="modal-body">
+                在大多數有經過統計的淨灘活動中，占據最大比例的，往往是菸蒂總體積最重，這還沒有統計到菸蒂本身擁有的如砷、鉛、甲醛、甲苯與苯并芘等有毒物質，以及它們在水中與土壤中釋放的有害污染有多麼巨大。
+                <img src="PIC/cig.jpg" alt="香菸" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
 
-			renderer = new THREE.WebGLRenderer();
-			renderer.setPixelRatio(window.devicePixelRatio);
-			renderer.setSize(window.innerWidth, window.innerHeight);
-			renderer.toneMapping = THREE.ACESFilmicToneMapping;
-			container.appendChild(renderer.domElement);
+<!-- net Modal -->
+<div class="modal fade custom-modal-size" id="netModal" tabindex="-1" role="dialog" aria-labelledby="netModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="netModalLabel"><b>廢棄漁具成「鬼網」影響生態</b></h5>          
+            </div>
+            <div class="modal-body">
+                全球海洋生態面臨每年64萬噸廢棄漁具的威脅，其中廢棄的漁網，又被稱為鬼網，它們不只會纏繞著海洋生物，也會挾帶許多垃圾，嚴重的話，還會影響船隻航行安全。
+                <img src="PIC/net.jpg" alt="捕撈漁網" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
 
-			scene = new THREE.Scene();
+<!-- Trash Modal -->
+<div class="modal fade custom-modal-size" id="trashModal" tabindex="-1" role="dialog" aria-labelledby="trashModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="trashModalLabel"><b>台灣的海岸垃圾</b></h5>          
+            </div>
+            <div class="modal-body">
+                海保署統計，台灣的海岸垃圾年估逾15萬袋、重量近650噸，2023年第一季，台灣海洋廢棄物清除量更高達2512公噸！
+                <img src="PIC/DSEA.jpg" alt="垃圾" class="img-fluid">
+                海洋並不會產生垃圾，從分析顯示，來自岸際、海漂、海底的廢棄物，都因人為活動所產生。不管是因海氣象、暴雨沖刷、生活廢水排入、管理不善工廠排廢及近岸遊憩等因素，使得陸域垃圾沿河川漂到海岸上或沖刷至海中，或者因海上作業，部分船舶不慎遺失漁網或漁具而產生船舶垃圾及漁業廢棄物。
+            </div>
+        </div>
+    </div>
+</div>
 
-			camera = new THREE.PerspectiveCamera(55, window.innerWidth / window.innerHeight, 1, 20000);
-			camera.position.set(30, 30, 100);
+<!-- wbot Modal -->
+<div class="modal fade custom-modal-size" id="wbotModal" tabindex="-1" role="dialog" aria-labelledby="wbotModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="wbotModalLabel"><b> 花蓮溪出海口的垃圾分布</b></h5>          
+            </div>
+            <div class="modal-body">
+                    北岸消波塊及出入口：雖以遊憩行為廢棄物為大宗，但亟需關注的是不肖業者與民眾蓄意棄置裝潢、建材、衛浴設備等廢棄物之熱點，此類廢棄物於環境中不僅清運困難，更增加民眾於海灘活動的危險性。
 
-			sun = new THREE.Vector3();
+    　　<br>溪側沙洲：以民生廢棄物為大宗，約有80％的垃圾有河川漂流痕跡，值得關注的是193縣道南段與花蓮溪流域緊密相鄰，多處熱點位於道路沿線邊坡和橋樑，遭缺乏公德心的民眾蓄意棄置家庭廢棄物，以致溪側沙洲時常可見整包垃圾。
 
-			const waterGeometry = new THREE.PlaneGeometry(10000, 10000);
+    　　<br>海側沙洲：廢棄物多聚集於高潮線上，多數具有海漂痕跡約佔50％，但也混雜許多相對乾淨、完整的廢棄物，並依屬性推測為休閒漁釣、季節性漁獵行為現地棄置，如提神飲料、煙蒂、木蝦、魚鉤等。
 
-			water = new Water(
-				waterGeometry, {
-					textureWidth: 512,
-					textureHeight: 512,
-					waterNormals: new THREE.TextureLoader().load('https://raw.githubusercontent.com/IanUme/ThreejsTest/master/textures/waternormals.jpg', function (texture) {
-						texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
-					}),
-					sunDirection: new THREE.Vector3(),
-					sunColor: 0xffffff,
-					waterColor: 0x001e0f,
-					distortionScale: 3.7,
-					fog: scene.fog !== undefined
-				}
-			);
+    　　<br>綜上，各區域數據雖然多為生活飲食、遊憩、漁獵活動廢棄物，但結合調查員每個月走訪現地觀察民眾使用行為，並仔細檢視廢棄物細節，便可瞭解花蓮溪口廢棄物來源各區域皆不相同。
+                <img src="PIC/tsources.jpg" alt="香菸" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
 
-			water.rotation.x = -Math.PI / 2;
+<!-- DOL Modal -->
+<div class="modal fade custom-modal-size" id="dolModal" tabindex="-1" role="dialog" aria-labelledby="dolModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="dolModalLabel"><b> 瓶鼻海豚 Tursiops truncatus  <a href="http://123.com" target="_blank">點我看模型！</a></b></h5>          
+            </div>
+            <div class="modal-body">
+                身體壯碩的瓶鼻海豚是大眾極為熟悉的動物明星，由於生性慧頡，常為水族館捕捉豢養以供表演之用。這種除了極區以外都可發現的種類，最大體長可達3.9公尺，成體體重甚至可達650公斤。有著略為高大而後彎背鰭的瓶鼻海豚，體色以暗灰色為主，身軀側面亦存在些許淡色帶，腹部則為灰白色。
 
-			scene.add(water);
+                <br>瓶鼻海豚雄性個體略大，而小海豚會在群體中接受母親長達一年以上的照顧，同時也有其他母海豚協助照顧幼體的現象。在本會的觀察紀錄裡，小群体 (1-20隻) 的瓶鼻海豚較難作近距離觀察，也有迴避船隻的現象。而當瓶鼻海豚以上百隻的群體出現時，則有船艏乘浪、魚躍、高跳等豐富的水面行為。
+                <img src="PIC/tt.jpg" alt="香菸" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
 
-			const sky = new Sky();
-			sky.scale.setScalar(10000);
-			scene.add(sky);
+<div id="app"></div>
 
-			const skyUniforms = sky.material.uniforms;
-			skyUniforms['turbidity'].value = 10;
-			skyUniforms['rayleigh'].value = 2;
-			skyUniforms['mieCoefficient'].value = 0.005;
-			skyUniforms['mieDirectionalG'].value = 0.8;
+<script type="module" src="main.js"></script>
 
-			const parameters = {
-				elevation: 2,
-				azimuth: 180
-			};
+<!-- Loading Modal -->
+<div class="modal fade custom-modal-size loading-modal" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <img src="assets/dolphin6.gif" alt="Loading...">
+                <p>加載中...</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-			const pmremGenerator = new THREE.PMREMGenerator(renderer);
+<!-- Collected Modal -->
+<div class="modal fade" id="collectedModal" tabindex="-1" role="dialog" aria-labelledby="collectedModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <img src="PIC/do.gif" alt="Collected!"> 
+                <p>所有垃圾已收集完畢！</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-			function updateSun() {
-				const phi = THREE.MathUtils.degToRad(90 - parameters.elevation);
-				const theta = THREE.MathUtils.degToRad(parameters.azimuth);
-				sun.setFromSphericalCoords(1, phi, theta);
-				sky.material.uniforms['sunPosition'].value.copy(sun);
-				water.material.uniforms['sunDirection'].value.copy(sun).normalize();
-				scene.environment = pmremGenerator.fromScene(sky).texture;
-			}
 
-			updateSun();
-
-			const geometry = new THREE.BoxGeometry(30, 30, 100);
-			const material = new THREE.MeshStandardMaterial({
-				roughness: 0
-			});
-
-			mesh = new THREE.Mesh(geometry, material);
-			scene.add(mesh);
-
-			controls = new OrbitControls(camera, renderer.domElement);
-			controls.maxPolarAngle = Math.PI * 0.495;
-			controls.target.set(0, 10, 0);
-			controls.minDistance = 40.0;
-			controls.maxDistance = 200.0;
-			controls.update();
-
-			stats = new Stats();
-			container.appendChild(stats.dom);
-
-			const gui = new GUI();
-
-			const folderSky = gui.addFolder('Sky');
-			folderSky.add(parameters, 'elevation', 0, 90, 0.1).onChange(updateSun);
-			folderSky.add(parameters, 'azimuth', -180, 180, 0.1).onChange(updateSun);
-			folderSky.open();
-
-			const waterUniforms = water.material.uniforms;
-
-			const folderWater = gui.addFolder('Water');
-			folderWater.add(waterUniforms.distortionScale, 'value', 0, 8, 0.1).name('distortionScale');
-			folderWater.add(waterUniforms.size, 'value', 0.1, 10, 0.1).name('size');
-			folderWater.open();
-
-			window.addEventListener('resize', onWindowResize);
-			document.addEventListener('keydown', onKeyDown);
-			document.addEventListener('keyup', onKeyUp);
-		}
-
-		function onKeyDown(event) {
-			switch (event.keyCode) {
-				case 87: // W
-				case 38: // Up arrow
-					moveForward = true;
-					break;
-				case 83: // S
-				case 40: // Down arrow
-					moveBackward = true;
-					break;
-				case 65: // A
-				case 37: // Left arrow
-					moveLeft = true;
-					break;
-				case 68: // D
-				case 39: // Right arrow
-					moveRight = true;
-					break;
-			}
-		}
-
-		function onKeyUp(event) {
-			switch (event.keyCode) {
-				case 87: // W
-				case 38: // Up arrow
-					moveForward = false;
-					break;
-				case 83: // S
-				case 40: // Down arrow
-					moveBackward = false;
-					break;
-				case 65: // A
-				case 37: // Left arrow
-					moveLeft = false;
-					break;
-				case 68: // D
-				case 39: // Right arrow
-					moveRight = false;
-					break;
-			}
-		}
-
-		function onWindowResize() {
-			camera.aspect = window.innerWidth / window.innerHeight;
-			camera.updateProjectionMatrix();
-			renderer.setSize(window.innerWidth, window.innerHeight);
-		}
-
-		function animate() {
-			requestAnimationFrame(animate);
-			updateCarMovement();
-			render();
-			stats.update();
-		}
-
-		function updateCarMovement() {
-			const time = performance.now() * 0.001;
-
-			// 更新車輛的位置和旋轉
-			if (moveForward) {
-				carVelocity.add(moveDirection.set(Math.cos(carRotation.y), 0, Math.sin(carRotation.y)).multiplyScalar(carSpeed));
-			}
-			if (moveBackward) {
-				carVelocity.sub(moveDirection.set(Math.cos(carRotation.y), 0, Math.sin(carRotation.y)).multiplyScalar(carSpeed));
-			}
-			if (moveLeft) {
-				carAngularVelocity = carTurnSpeed;
-			}
-			if (moveRight) {
-				carAngularVelocity = -carTurnSpeed;
-			}
-
-			carVelocity.clampLength(0, carSpeed);
-			carPosition.add(carVelocity);
-
-			carRotation.y += carAngularVelocity;
-
-			carVelocity.multiplyScalar(0.9); // 減少速度
-			carAngularVelocity *= 0.9; // 減少角速度
-		}
-
-		function render() {
-			// 設置車輛模型的位置和旋轉
-			mesh.position.copy(carPosition);
-			mesh.rotation.copy(carRotation);
-
-			water.material.uniforms['time'].value += 1.0 / 60.0;
-
-			renderer.render(scene, camera);
-		}
-	</script>
+        
 </body>
+
 </html>
